# esp-oled-menukit

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
components/buttons/: CMakeLists.txt  README.md
components/buttons/include/: buttons.h
components/buttons/src/: buttons.c
components/font8x8/: CMakeLists.txt  README.md
components/font8x8/include/: font8x8.h
components/menu/: CMakeLists.txt  README.md
components/menu/include/: menu.h
components/menu/src/: menu.c
components/sh1106/: CMakeLists.txt  README.md
components/sh1106/include/: sh1106.h
components/sh1106/src/: sh1106.c
docs/: 2026-05-28-buttons-design.md  2026-05-28-buttons-plan.md  2026-05-28-menu-engine-design.md  2026-05-28-menu-engine-plan.md  2026-05-28-quality-reusability-design.md  2026-05-28-quality-reusability-plan.md  2026-05-28-screen-renders-design.md  2026-05-28-screen-renders-plan.md  2026-05-28-sh1106-spi-learning-design.md  2026-05-28-sh1106-spi-learning-plan.md  2026-05-28-sh1106-text-rendering-design.md  2026-05-28-sh1106-text-rendering-plan.md
main/: CMakeLists.txt  README.md  buttons.c  buttons.h  font8x8.c  icons.c  icons.h  main.c  menu.c  menu.h  sh1106.c  sh1106.h
tools/: gen_icons.py
tools/host_render/: CMakeLists.txt  Makefile  README.md  pgm_to_png.py  render.c  scenes.c  scenes.h  sh1106_host.c  sh1106_host.h
tools/host_render/stubs/: esp_log.h
tools/host_render/stubs/freertos/: FreeRTOS.h  queue.h  task.h
